# tmpl-python-project

./: .gitignore  .pre-commit-config.yaml  .yamllint  Makefile  README.md  codecov.yml  main.py  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  refactor-pr-tests.yml  test.yml
docs/: getting-started.md  index.md  mkdocs.yml
docs/reference/: core.md
src/: __init__.py  logging.py
src/project_name/: __init__.py  config.py
src/test_project/: logging.py
src/tmpl_python_project/: __init__.py  exceptions.py
tests/: conftest.py
tests/unit/: test_example.py
